--- a/sled_notifications/templates/sled_notifications/notifications_list.html
+++ b/sled_notifications/templates/sled_notifications/notifications_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include "modal_container.html" %}
 
-<div class="jb-container">
+<div class="jb-container jb-table-no-lines">
   {% if unread|length > 0 %}
 
   <h1 class="jb-heading-1">
