--- a/lenses/templates/lenses/lens_resolve_duplicates.html
+++ b/lenses/templates/lenses/lens_resolve_duplicates.html
@@ -6,7 +6,7 @@
 
 <div class="jb-container">
 
-  <h1 class="jb-heading-1">Duplicates</h1>
+  <h1 class="jb-heading-1">Duplicates!</h1>
 
 
   <form id="formset" method="POST">
