A button in the user profile to deal with orphan data.

--- a/lenses/templates/lenses/lens_ask_access.html
+++ b/lenses/templates/lenses/lens_ask_access.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Ask private object owners for access?
+Ask private Lens owner for access?
 {% endblock title %}
 
 
