Replaced lens flags with a single field.

--- a/lenses/templates/lenses/lens_add_update.html
+++ b/lenses/templates/lenses/lens_add_update.html
@@ -87,36 +87,12 @@
                             <td>{{ form.image_sep }}</td>
                           </tr>
                           <tr>
-                            <td>{{ form.z_lens.errors }}</td>
+                            <td>{{ form.flag.errors }}</td>
 			    <td>
-			      <div class="sled-help-tooltip">{{ form.z_lens.label|safe }}</div>
-			      <div class="sled-help-tooltip-content">{{ form.z_lens.help_text|safe }}</div>
+			      <div class="sled-help-tooltip">{{ form.flag.label|safe }}</div>
+			      <div class="sled-help-tooltip-content">{{ form.flag.help_text|safe }}</div>
 			    </td>
-                            <td>{{ form.z_lens }}</td>
-                          </tr>
-                          <tr>
-                            <td>{{ form.z_source.errors }}</td>
-			    <td>
-			      <div class="sled-help-tooltip">{{ form.z_source.label|safe }}</div>
-			      <div class="sled-help-tooltip-content">{{ form.z_source.help_text|safe }}</div>
-			    </td>
-                            <td>{{ form.z_source }}</td>
-                          </tr>
-                          <tr>
-                            <td>{{ form.flag_confirmed.errors }}</td>
-			    <td>
-			      <div class="sled-help-tooltip">{{ form.flag_confirmed.label|safe }}</div>
-			      <div class="sled-help-tooltip-content">{{ form.flag_confirmed.help_text|safe }}</div>
-			    </td>
-                            <td>{{ form.flag_confirmed }}</td>
-                          </tr>
-                          <tr>
-                            <td>{{ form.flag_contaminant.errors }}</td>
-			    <td>
-			      <div class="sled-help-tooltip">{{ form.flag_contaminant.label|safe }}</div>
-			      <div class="sled-help-tooltip-content">{{ form.flag_contaminant.help_text|safe }}</div>
-			    </td>
-                            <td>{{ form.flag_contaminant }}</td>
+                            <td>{{ form.flag }}</td>
                           </tr>
 			  {% if request.resolver_match.url_name == 'lens-add' %}
                           <tr>
@@ -160,6 +136,14 @@
 			      <div class="sled-help-tooltip-content">{{ form.source_type.help_text|safe }}</div>
 			    </td>
                             <td>{{ form.source_type }}</td>
+                          </tr>
+                          <tr>
+                            <td>{{ form.contaminant_type.errors }}</td>
+                            <td>
+			      <div class="sled-help-tooltip">{{ form.contaminant_type.label|safe }}</div>
+			      <div class="sled-help-tooltip-content">{{ form.contaminant_type.help_text|safe }}</div>
+			    </td>
+                            <td>{{ form.contaminant_type }}</td>
                           </tr>
                           <tr>
                             <td>{{ form.image_conf.errors }}</td>
