--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -203,31 +203,10 @@
 		<table>
 		  <tr>
                     <td>
-		      <div class="sled-help-tooltip"><label>{{ form.flag_confirmed.label }}</label></div>
-		      <div class="sled-help-tooltip-content">{{ form.flag_confirmed.help_text }}</div>
+		      <div class="sled-help-tooltip"><label>{{ form.flag.label }}</label></div>
+		      <div class="sled-help-tooltip-content">{{ form.flag.help_text }}</div>
 		    </td>
-                    <td>{{ form.flag_confirmed }}</td>
-		  </tr>
-		  <tr>
-                    <td>
-		      <div class="sled-help-tooltip"><label>{{ form.flag_unconfirmed.label }}</label></div>
-		      <div class="sled-help-tooltip-content">{{ form.flag_unconfirmed.help_text }}</div>
-		    </td>
-                    <td>{{ form.flag_unconfirmed }}</td>
-		  </tr>
-		  <tr>
-                    <td>
-		      <div class="sled-help-tooltip"><label>{{ form.flag_contaminant.label }}</label></div>
-		      <div class="sled-help-tooltip-content">{{ form.flag_contaminant.help_text }}</div>
-		    </td>
-                    <td>{{ form.flag_contaminant }}</td>
-		  </tr>
-		  <tr>
-                    <td>
-		      <div class="sled-help-tooltip"><label>{{ form.flag_uncontaminant.label }}</label></div>
-		      <div class="sled-help-tooltip-content">{{ form.flag_uncontaminant.help_text }}</div>
-		    </td>
-                    <td>{{ form.flag_uncontaminant }}</td>
+                    <td>{{ form.flag }}</td>
 		  </tr>
 		  <tr>
                     <td>
