--- a/sled_tasks/templates/sled_tasks/task_list_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_list_recipient.html
@@ -63,21 +63,18 @@
         {% else %}
         
         {% if task.status == 'C' %}
-	{% if task.task_type == 'MergeLenses' %}
-	<a target="_blank" class="btn btn-info pull-right" href="{% url 'sled_tasks:tasks-detail-merge' task.id %}">
-	  Merge
-	</a>
-	{% else %}
 	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
           <img src="{% static 'icons/eye-fill.svg' %}">
           View
 	</button>
-	{% endif %}
         {% else %}
 	{% if task.task_type == 'MergeLenses' %}
-	<a target="_blank" class="btn btn-info pull-right" href="{% url 'sled_tasks:tasks-detail-merge' task.id %}">
-	  Merge
-	</a>
+	<form action="{% url 'sled_tasks:tasks-detail-merge' task.id %}">
+	  <button type="submit" class="jb-submit-button-1"> 
+            <img src="{% static 'icons/union.svg' %}">
+	    Merge
+	  </button>
+	</form>
 	{% else %}
         <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
           <img src="{% static 'icons/send-fill.svg' %}">
