--- a/sled_tasks/templates/sled_tasks/task_merge_detail.html
+++ b/sled_tasks/templates/sled_tasks/task_merge_detail.html
@@ -239,7 +239,9 @@
     {{ form.response_comment }}
   </div>
   
-  <button type="submit">Respond</button>
+  <button type="submit" class="jb-submit-button-1">
+    Respond
+  </button>
   </form>
   {% endif %}
 
